// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a FormatFile 1`] = `
<div
  className="formatFile"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="imageBlock"
    data-testid="imageBlock"
    onClick={[Function]}
    style={Object {}}
    tabIndex={0}
  >
    <div
      className="icon"
    >
      <svg
        className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
        data-testid="file"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="_2e1AAW5-LqZd1rLcmAUuzN"
          d="M597.333 384c0-23.564-19.102-42.667-42.667-42.667h-128c-23.564 0-42.667 19.103-42.667 42.667v256c0 23.565 19.103 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-64h85.333c23.565 0 42.667-19.102 42.667-42.667s-19.102-42.667-42.667-42.667h-85.333v-64h85.333c23.565 0 42.667-19.103 42.667-42.667z"
        />
        <path
          className="_2e1AAW5-LqZd1rLcmAUuzN"
          d="M256 85.333c-47.128 0-85.333 38.205-85.333 85.333v682.667c0 47.13 38.205 85.333 85.333 85.333h512c47.13 0 85.333-38.204 85.333-85.333v-536.994c0-22.632-8.99-44.337-24.994-60.34l-145.673-145.673c-16.004-16.003-37.709-24.994-60.339-24.994h-366.327zM256 853.333v-682.667h366.327l145.673 145.673v536.994h-512z"
        />
      </svg>
    </div>
  </div>
  <div
    className="contentBlock"
  >
    <span
      className="base regular"
    >
      Funky Corn
    </span>
    <p
      className="base regular small greyBlueDark"
    >
      1 KB
    </p>
  </div>
</div>
`;

exports[`when the format file is a thumbnail when the thumbnail is default sized renders a FormatFile as a default sized thumbnail 1`] = `
<div
  className="thumbnail thumbnailDefault"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="imageBlock imageBlockCompact imageBlockOverlayCompact"
    data-testid="imageBlock"
    onClick={[Function]}
    style={
      Object {
        "height": "inherit",
        "width": "inherit",
      }
    }
    tabIndex={0}
  >
    <div
      className="fileContentWrapper"
    >
      <div
        className="icon"
      >
        <svg
          className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
          data-testid="camera"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="_2e1AAW5-LqZd1rLcmAUuzN"
            d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
          />
        </svg>
      </div>
      <div
        className="thumbnailFilenameSmall"
      >
        <span
          className="base regular"
        >
          Pink Dolphin
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`when the format file is a thumbnail when the thumbnail is large sized renders a FormatFile as a larget sized thumbnail 1`] = `
<div
  className="thumbnail thumbnailLarge"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="imageBlock imageBlockCompact imageBlockOverlayCompact"
    data-testid="imageBlock"
    onClick={[Function]}
    style={
      Object {
        "height": "inherit",
        "width": "inherit",
      }
    }
    tabIndex={0}
  >
    <div
      className="fileContentWrapper fileContentWrapperLarge"
    >
      <div
        className="icon"
      >
        <svg
          className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
          data-testid="camera"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="_2e1AAW5-LqZd1rLcmAUuzN"
            d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
          />
        </svg>
      </div>
      <div
        className="thumbnailFilename"
      >
        <span
          className="base regular"
        >
          Pink Dolphin
        </span>
      </div>
    </div>
  </div>
</div>
`;
